--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-cbapi==0.8.1
--e git://github.com/carbonblack/cbfeeds.git#egg=cbfeeds
--e git://github.com/carbonblack/cb-integration.git#egg=cbint
+cbfeeds==0.8.0
+cbint==0.8.9
+pyinstaller==3.1.1
 
